[project]
name = "cs_4100_project"
version = "0.1.0"
description = "Safest route"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mapillary>=1.0.15",
    "numpy>=2.3.4",
    "osmnx>=2.0.6",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "scipy>=1.11.0",
    "rtree>=1.0.0",
    "requests>=2.31.0",
    "scikit-learn>=1.7.2",
    "matplotlib>=3.10.7",
]
